RESTful 기반 RPC 처리 모듈 추가.